Modified CSS to fix broken style. done.

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ body {
 	min-width:980px;
 	font-family: Arial, Helvetica, sans-serif;
 	text-align:left;
-	background-color:#333;
+	
 }
 
 strong {
@@ -108,13 +108,6 @@ ul#inner-footer li.inner-footer_icon a {
  	text-indent:-9999px;
 }
 
-ul#inner-footer li.inner-footer_icon.facebook a {
- 	background:url('im/facebook.png') no-repeat top left;
-}
-
-ul#inner-footer li.inner-footer_icon.twitter a {
- 	background:url('im/twitter.png') no-repeat top left;
-}
 
 ul#inner-footer li.inner-footer_icon a:hover {
 	background-position:bottom left;
@@ -155,7 +148,7 @@ span#submit-button-border {
 	-moz-border-radius: 3px;
 	border-radius: 3px;
 	background:#333;
-	margin-right: 15px;
+	margin-right: 10px;
 }
 
 input#submit-button {
@@ -191,36 +184,11 @@ span.privacy-policy {
 	margin:5px 0 0 0;
 }
 
+/* USER */
 
-/* AJAX MESSAGES */
-
-#success, #returning, #success-content {display:none;}
-
-#error {
-	color:#ed534d;
-	font-size:0.8em;
-	margin:10px 0 0 0;
-	text-shadow: 0px 1px 1px #FFF;
-	font-weight:bold;
-	width:320px;
-	}
-
-#returning p {
-	margin:0px;
+#button-aligin {
+	margin-left: 5000px ;
 }
-
-span.dirname {
-	display:none;
-}
-
-span.user {
-	font-weight:bold;
-}
-
-span.clicks, span.conversions {
-	font-weight:bold;
-}
-
 
 /* SOCIAL */
 
@@ -261,13 +229,13 @@ ul#footer {
 	right:30px;
 	overflow:hidden;
 	font-size:0.7em;
-	background:#000;
+	background:#e9e9e9;
 	padding:2px 10px;
 }
 
 ul#footer li {
 	float:left; 
-	color:#aaa;
+	color:#333;
 	padding-top:3px;
 	padding-bottom:0;
 }
@@ -278,7 +246,6 @@ ul#footer li a {
 }
 
 ul#footer li a.logo {
-	background:url('im/mini-logo.png') no-repeat top center;
 	display:inline-block;
 	height:17px;
 	width:84px;
